[gd_scene load_steps=15 format=2]

[ext_resource path="res://source/character/ai/boss/Boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/character/ai/boss/android/Android.gd" type="Script" id=2]
[ext_resource path="res://graphics/images/characters/android_dash.png" type="Texture" id=3]
[ext_resource path="res://graphics/images/characters/andorid_standby.png" type="Texture" id=4]
[ext_resource path="res://source/character/ai/boss/android/states/Idle.gd" type="Script" id=5]
[ext_resource path="res://addons/finite_state_machine/icons/state.png" type="Texture" id=6]
[ext_resource path="res://source/character/ai/boss/android/states/Seek.gd" type="Script" id=7]
[ext_resource path="res://source/character/ai/boss/android/states/DashAttack.gd" type="Script" id=8]
[ext_resource path="res://source/character/ai/boss/android/states/ShootAttack.gd" type="Script" id=9]

[sub_resource type="Animation" id=3]
resource_name = "dash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lower/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lower/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lower/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lower/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lower/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lower/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "seek"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lower/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lower/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lower/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "shoot"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Lower/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lower/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lower/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lower/Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 25 )

[node name="Android" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimationPlayer" parent="." index="1"]
anims/dash = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/seek = SubResource( 5 )
anims/shoot = SubResource( 2 )

[node name="Sprite" parent="Lower" index="1"]
texture = ExtResource( 4 )

[node name="Upper" parent="." index="4"]
visible = false

[node name="Idle" type="Node" parent="FiniteStateMachine" index="1"]
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}

[node name="Seek" type="Node" parent="FiniteStateMachine" index="2"]
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}

[node name="DashAttack" type="Node" parent="FiniteStateMachine" index="3"]
script = ExtResource( 8 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}
dash_speed = 320

[node name="PostBounceTimer" type="Timer" parent="FiniteStateMachine/DashAttack" index="0"]
wait_time = 0.3
one_shot = true

[node name="ShootAttack" type="Node" parent="FiniteStateMachine" index="4"]
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}

[node name="HitArea" parent="." index="7"]
position = Vector2( 27, -25 )

[node name="CollisionShape2D" parent="HitArea" index="0"]
shape = SubResource( 1 )
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
